# discord-bot-python

./: .dockerignore  .gitignore  CICD.md  Dockerfile  GUIA_RAPIDA_CICD.md  I18N_IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  bot.py  constants.py  deploy.sh  discord-bot.json  docker-compose.yml  i18n.py  main.py  pyproject.toml  requirements.txt  settings.py  translator.py
.github/workflows/: deploy.yml
api/: README.md  __init__.py  app.py  auth.py  routes_clans.py  routes_health.py  server.py
cogs/commands/: tasks.py
cogs/events/: base.py  guild.py  member.py  message.py  voice.py
cogs/slash_commands/: automatic_messages.py  channel_formats.py  config_logs.py  triggers.py
database/: __init__.py  database.py  migrate_add_clan_channels.py  schema.sql
database/migrations/: add_clan_custom_config.sql  add_name_to_automatic_messages.sql  add_weekly_scheduling.sql
database/models/: __init__.py  automatic_message.py  channel_format.py  log_config.py  trigger.py
events/: base.py  guild.py  member.py  message.py  voice.py
examples/: api_example.py  api_example.sh
modules/automatic_messages/: MENSAJES_AUTOMATICOS.md  __init__.py  constants.py  message_formatter.py  migrate.py  models.py  scheduler.py  service.py  (+5 more)
services/: __init__.py  automatic_messages_service.py  channel_formats_service.py  logs_configs_service.py  triggers_service.py
tasks/: automatic_messages.py
tests/: test_api.py
translations/: README.md  en-US.json  en.json  es-ES.json  es.json
utils/: channels.py  check_trigger.py  embeds.py  logger.py  send_message_to_admin.py
(+80 files in other folders)
