[project]
name = "discord-bot-python"
version = "0.1.0"
description = "Bot de discord"
authors = [
    { name = "Guillermo Merino", email = "guillermomerino2107@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "discord-py>=2.5.2",
]

[tool.black]
line-length = 80
target-version = ['py311']
skip-string-normalization = true
